# antifraud-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.grafana.yml  docker-compose.yml  prometheus.yml  pyproject.toml
app/: config.py  healthz.py  logger.py  logic.py  main.py  metrics.py  redis_client.py  schemas.py
tests/: test_main.py
