[project]
name = "test-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.122.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "redis>=5.0.0",
    "prometheus-client>=0.19.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "httpx>=0.25.0"
]
